examples/test/testpolicy15346.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15346
  namespace: namespace237
spec:
  podSelector:
    matchLabels:
      key26: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value20
          key46: value11
      podSelector:
        matchLabels:
          key43: value35
          key36: value16
